samples/_failures_safe/1761516781_8123c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73470a2c.c: In function ‘main’:
./samples/SAFE/__tmp_73470a2c.c:147:12: error: missing terminating " character
  147 |     printf("Enter log entries (format: YYYY-MM-DD HH
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_73470a2c.c:147:5: error: expected expression at end of input
  147 |     printf("Enter log entries (format: YYYY-MM-DD HH
      |     ^~~~~~
./samples/SAFE/__tmp_73470a2c.c:147:5: error: expected declaration or statement at end of input
